[package]
name = "dengbot"
version = "1.1.0"
authors = ["Michael Degano <michael@dega.no>"]

[dependencies]
slack = "0.21.0"
log = "0.4.2"
regex = "1.0.0"
chrono = "0.4.4"
rand = "0.5.1"
serde = "1.0.60"
serde_derive = "1.0.60"
serde_json = "1.0.20"
simplelog = "0.5.2"
diesel = { version = "1.3.0", features = ["postgres"] }
dotenv = "0.13.0"
dotenv_codegen = "0.11.0"
hyper = "0.11.27"
futures = "0.1.14"
slack-hook = "0.6.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
url = "1.7.0"